--- a/App.config
+++ b/App.config
@@ -19,6 +19,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="StudentDBContext" connectionString="data source=MSI\SHIROK;initial catalog=QLSV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StudentDBContext1" connectionString="data source=MSI\SHIROK;initial catalog=LAB04;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
